// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WidgetContextRenderer > should render the registered widget area with a subtitle component 1`] = `
<div
  class="googlesitekit-widget-context"
>
  <div
    class="mdc-layout-grid googlesitekit-hidden googlesitekit-widget-area googlesitekit-widget-area--TestArea1 googlesitekit-widget-area--composite"
  />
  <div
    class="mdc-layout-grid googlesitekit-widget-area googlesitekit-widget-area--TestArea3 googlesitekit-widget-area--composite"
  >
    <div
      class="mdc-layout-grid__inner"
    >
      <div
        class="googlesitekit-widget-area-header mdc-layout-grid__cell mdc-layout-grid__cell--span-12"
      >
        <h3
          class="googlesitekit-typography googlesitekit-widget-area-header__title googlesitekit-typography--headline googlesitekit-typography--small"
        >
          Dashboard Body
        </h3>
        <div
          class="googlesitekit-widget-area-header__details"
        >
          <h4
            class="googlesitekit-typography googlesitekit-widget-area-header__subtitle googlesitekit-typography--body googlesitekit-typography--medium"
          >
            Component title
          </h4>
        </div>
      </div>
    </div>
    <div
      class="googlesitekit-widget-area-widgets"
    >
      <div
        class="mdc-layout-grid__inner"
      >
        <div
          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12"
        >
          <div
            class="mdc-layout-grid"
          >
            <div
              class="mdc-layout-grid__inner"
            >
              <div
                class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12"
              >
                <div
                  class="googlesitekit-widget googlesitekit-widget--TestWidget1"
                >
                  <div
                    class="googlesitekit-widget__body"
                  >
                    <div>
                      Foo bar!
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mdc-layout-grid__inner"
    />
  </div>
</div>
`;

exports[`WidgetContextRenderer > should render the registered widget areas 1`] = `
<div
  class="googlesitekit-widget-context"
>
  <div
    class="mdc-layout-grid googlesitekit-widget-area googlesitekit-widget-area--TestArea1 googlesitekit-widget-area--composite"
  >
    <div
      class="mdc-layout-grid__inner"
    >
      <div
        class="googlesitekit-widget-area-header mdc-layout-grid__cell mdc-layout-grid__cell--span-12"
      >
        <h3
          class="googlesitekit-typography googlesitekit-widget-area-header__title googlesitekit-typography--headline googlesitekit-typography--small"
        >
          Dashboard Header
        </h3>
        <div
          class="googlesitekit-widget-area-header__details"
        >
          <h4
            class="googlesitekit-typography googlesitekit-widget-area-header__subtitle googlesitekit-typography--body googlesitekit-typography--medium"
          >
            Cool stuff for yoursite.com
          </h4>
        </div>
      </div>
    </div>
    <div
      class="googlesitekit-widget-area-widgets"
    >
      <div
        class="mdc-layout-grid__inner"
      >
        <div
          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12"
        >
          <div
            class="mdc-layout-grid"
          >
            <div
              class="mdc-layout-grid__inner"
            >
              <div
                class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12"
              >
                <div
                  class="googlesitekit-widget googlesitekit-widget--TestWidget1"
                >
                  <div
                    class="googlesitekit-widget__body"
                  >
                    <div>
                      Foo bar!
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mdc-layout-grid__inner"
    />
  </div>
  <div
    class="mdc-layout-grid googlesitekit-widget-area googlesitekit-widget-area--TestArea2 googlesitekit-widget-area--composite"
  >
    <div
      class="mdc-layout-grid__inner"
    >
      <div
        class="googlesitekit-widget-area-header mdc-layout-grid__cell mdc-layout-grid__cell--span-12"
      >
        <h3
          class="googlesitekit-typography googlesitekit-widget-area-header__title googlesitekit-typography--headline googlesitekit-typography--small"
        >
          Dashboard Body
        </h3>
        <div
          class="googlesitekit-widget-area-header__details"
        >
          <h4
            class="googlesitekit-typography googlesitekit-widget-area-header__subtitle googlesitekit-typography--body googlesitekit-typography--medium"
          >
            More cool stuff for yoursite.com
          </h4>
        </div>
      </div>
    </div>
    <div
      class="googlesitekit-widget-area-widgets"
    >
      <div
        class="mdc-layout-grid__inner"
      >
        <div
          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12"
        >
          <div
            class="mdc-layout-grid"
          >
            <div
              class="mdc-layout-grid__inner"
            >
              <div
                class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12"
              >
                <div
                  class="googlesitekit-widget googlesitekit-widget--TestWidget2"
                >
                  <div
                    class="googlesitekit-widget__body"
                  >
                    <div>
                      Foo bar!
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mdc-layout-grid__inner"
    />
  </div>
</div>
`;

exports[`WidgetContextRenderer should render the registered widget area with a subtitle component 1`] = `
<div
  class="googlesitekit-widget-context"
>
  <div
    class="mdc-layout-grid googlesitekit-hidden googlesitekit-widget-area googlesitekit-widget-area--TestArea1 googlesitekit-widget-area--composite"
  />
  <div
    class="mdc-layout-grid googlesitekit-widget-area googlesitekit-widget-area--TestArea3 googlesitekit-widget-area--composite"
  >
    <div
      class="mdc-layout-grid__inner"
    >
      <div
        class="googlesitekit-widget-area-header mdc-layout-grid__cell mdc-layout-grid__cell--span-12"
      >
        <h3
          class="googlesitekit-typography googlesitekit-widget-area-header__title googlesitekit-typography--headline googlesitekit-typography--small"
        >
          Dashboard Body
        </h3>
        <div
          class="googlesitekit-widget-area-header__details"
        >
          <h4
            class="googlesitekit-typography googlesitekit-widget-area-header__subtitle googlesitekit-typography--body googlesitekit-typography--medium"
          >
            Component title
          </h4>
        </div>
      </div>
    </div>
    <div
      class="googlesitekit-widget-area-widgets"
    >
      <div
        class="mdc-layout-grid__inner"
      >
        <div
          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12"
        >
          <div
            class="mdc-layout-grid"
          >
            <div
              class="mdc-layout-grid__inner"
            >
              <div
                class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12"
              >
                <div
                  class="googlesitekit-widget googlesitekit-widget--TestWidget1"
                >
                  <div
                    class="googlesitekit-widget__body"
                  >
                    <div>
                      Foo bar!
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mdc-layout-grid__inner"
    />
  </div>
</div>
`;

exports[`WidgetContextRenderer should render the registered widget areas 1`] = `
<div
  class="googlesitekit-widget-context"
>
  <div
    class="mdc-layout-grid googlesitekit-widget-area googlesitekit-widget-area--TestArea1 googlesitekit-widget-area--composite"
  >
    <div
      class="mdc-layout-grid__inner"
    >
      <div
        class="googlesitekit-widget-area-header mdc-layout-grid__cell mdc-layout-grid__cell--span-12"
      >
        <h3
          class="googlesitekit-typography googlesitekit-widget-area-header__title googlesitekit-typography--headline googlesitekit-typography--small"
        >
          Dashboard Header
        </h3>
        <div
          class="googlesitekit-widget-area-header__details"
        >
          <h4
            class="googlesitekit-typography googlesitekit-widget-area-header__subtitle googlesitekit-typography--body googlesitekit-typography--medium"
          >
            Cool stuff for yoursite.com
          </h4>
        </div>
      </div>
    </div>
    <div
      class="googlesitekit-widget-area-widgets"
    >
      <div
        class="mdc-layout-grid__inner"
      >
        <div
          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12"
        >
          <div
            class="mdc-layout-grid"
          >
            <div
              class="mdc-layout-grid__inner"
            >
              <div
                class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12"
              >
                <div
                  class="googlesitekit-widget googlesitekit-widget--TestWidget1"
                >
                  <div
                    class="googlesitekit-widget__body"
                  >
                    <div>
                      Foo bar!
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mdc-layout-grid__inner"
    />
  </div>
  <div
    class="mdc-layout-grid googlesitekit-widget-area googlesitekit-widget-area--TestArea2 googlesitekit-widget-area--composite"
  >
    <div
      class="mdc-layout-grid__inner"
    >
      <div
        class="googlesitekit-widget-area-header mdc-layout-grid__cell mdc-layout-grid__cell--span-12"
      >
        <h3
          class="googlesitekit-typography googlesitekit-widget-area-header__title googlesitekit-typography--headline googlesitekit-typography--small"
        >
          Dashboard Body
        </h3>
        <div
          class="googlesitekit-widget-area-header__details"
        >
          <h4
            class="googlesitekit-typography googlesitekit-widget-area-header__subtitle googlesitekit-typography--body googlesitekit-typography--medium"
          >
            More cool stuff for yoursite.com
          </h4>
        </div>
      </div>
    </div>
    <div
      class="googlesitekit-widget-area-widgets"
    >
      <div
        class="mdc-layout-grid__inner"
      >
        <div
          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12"
        >
          <div
            class="mdc-layout-grid"
          >
            <div
              class="mdc-layout-grid__inner"
            >
              <div
                class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12"
              >
                <div
                  class="googlesitekit-widget googlesitekit-widget--TestWidget2"
                >
                  <div
                    class="googlesitekit-widget__body"
                  >
                    <div>
                      Foo bar!
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mdc-layout-grid__inner"
    />
  </div>
</div>
`;
